--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,33 @@
-numpy==1.20.1
-pandas==1.2.3
-python-dateutil==2.8.1
-pytz==2021.1
-selenium==3.141.0
-six==1.15.0
-urllib3==1.26.2
+async-generator==1.10
+attrs==21.2.0
+autopep8==1.6.0
+certifi==2021.10.8
+charset-normalizer==2.0.9
+colorama==0.4.4
+configparser==5.2.0
+crayons==0.4.0
+h11==0.12.0
+idna==3.3
+mccabe==0.6.1
+numpy==1.21.4
+outcome==1.1.0
+packaging==21.3
+pandas==1.3.4
+pip-review==1.1.0
+pkg_resources==0.0.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+selenium==4.1.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+toml==0.10.2
+trio==0.19.0
+trio-websocket==0.9.2
+urllib3==1.26.7
+webdriver-manager==3.5.2
+wsproto==1.0.0
